--- a/app/src/main/res/menu/menus_opciones.xml
+++ b/app/src/main/res/menu/menus_opciones.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
 
     <item
+
         android:title="Buscar contactos"
         android:id="@+id/buscar_contactos_menu"
-        app:showAsAction="never">
+        app:showAsAction="never"
+        >
     </item>
 
     <item
         android:title="Mi perfil"
+        android:tooltipText="Mi perfil"
         android:id="@+id/miperfil_menu"
         app:showAsAction="never">
     </item>
