--- a/app/src/main/res/layout/toolbar_principal.xml
+++ b/app/src/main/res/layout/toolbar_principal.xml
@@ -5,6 +5,6 @@
     android:layout_height="wrap_content"
     android:id="@+id/tollbar_app_principal"
     android:background="@color/black"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 </androidx.appcompat.widget.Toolbar>
