--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,6 @@
         <!-- Customize your theme here. -->
 
     </style>
+
+    <style name="AlertDialog" parent="Base.Theme.AppCompat.Light.Dialog"></style>
 </resources>
